crates/codegen/language/tests/src/fail/parsing/missing_field/test.stderr
error: Expected field: 'title'.
  --> src/fail/parsing/missing_field/test.rs:13:9
   |
13 |         topics = []
   |         ^^^^^^
